--- a/Basics/2_Font_color.css
+++ b/Basics/2_Font_color.css
@@ -3,12 +3,16 @@
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  background-color: burlywood;
+  color: hsl(191, 85%, 24%);
 }
 
 #p1,#p2,#p3{
     font-family:"Playwrite DE Grund", cursive;
+    background-color: rgb(138, 194, 189);
 }
 
 #a1{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: #97c5a7a5;
 }
