--- a/Basics/3_border.css
+++ b/Basics/3_border.css
@@ -49,6 +49,6 @@ span{
     border-radius: 5px;
     width: fit-content;
     height: fit-content;
-    padding:10px;
-    margin:20px;
+    padding:10px 20px 10px 20px;
+    margin:10px 20px 10px 20px; 
 }
