--- a/Basics/8_unit_size.css
+++ b/Basics/8_unit_size.css
@@ -2,12 +2,40 @@
     border: 1px solid black;
     width:25%;
 } */
-
+/* *{
+    margin:0;
+    padding:0;
+}
 .parent{
     border:1px solid black;
-    width:50%;
+    width:50vw;
+    height:50vh;
 }
 .child{
     border:1px solid green;
     width:20%;
-}
+} */
+/* .wrapper {
+    font-size: 1em;
+  }
+  
+  .px {
+    width: 200px;
+  }
+  
+  .vw {
+    width: 10vw;
+  }
+  
+  .em {
+    width: 10em;
+  } */
+
+  .container{
+    font-size: 10px;
+  }
+  .box{
+    font-size: 10rem; 
+    /* 10rem=16*10 =160*/
+    /* 10em=10*10=100 */
+  }
