add overflow concept

--- a/Basics/11_float_clear2.css
+++ b/Basics/11_float_clear2.css
@@ -11,3 +11,16 @@
     border: 1px solid brown;
     float:left
 }
+
+#item1{
+    float: right;
+ }
+ #item2{
+    float: right;
+ }
+ #item3{
+    float: right;
+ }
+#item4{
+   float: right;
+}
