--- a/Basics/practice1.css
+++ b/Basics/practice1.css
@@ -1,13 +1,21 @@
 .container{
     border: 3px solid brown;
     background-color: antiquewhite;
-    
     margin:1px;
     padding:1px;
     display: flex;
-    flex-direction: column;
-    justify-content:space-evenly;
-    align-items:center;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 50vw;
+    height: 50vh;
+}
+#box1{
+    border: 3px solid blue;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 50%;
+    height: 50%;
 }
 .item{
     font-size: 20px;
@@ -29,7 +37,6 @@
 }
 #item3{
     background-color: coral;
-    align-self: flex-start;
 }
 #item4{
     background-color: cadetblue;
